--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,40 @@
         />-->
 
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10sp"
+        android:layout_marginTop="10sp"
+        android:padding="5sp"
+        android:id="@+id/share"
+        android:background="@drawable/share_background"
+        android:orientation="horizontal"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:layout_marginStart="10sp"
+            android:layout_marginEnd="10sp"
+            android:src="@drawable/ic_share"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Share"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:paddingStart="2dp"
+            android:paddingEnd="80sp"
+            android:layout_marginStart="10sp"/>
+
+
+    </LinearLayout>
+
+
     <ImageView
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="40sp"
